[package]
author = "Tom R. <ltratcliff@gmail.com>"
name = "kml2gpx"
version = "0.1.0"
edition = "2021"
description = "Converts KML files to GPX files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.189", features = ["derive"] }
